--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -104,6 +104,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:25b:f700::913;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -163,7 +164,6 @@ allow 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 allow 2605:6400:20:be7::1;
 allow 2605:6400:20:c26:5163:253e:1ef6:d887;
 allow 2605:6400:20:c26:5163:253e:1ef6:d896;
-allow 2605:6400:20:d54:78d8:62d7:9b5a:6ae9;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:e948:4cee:191b:1e55:25b3;
 allow 2605:6400:30:ea52:4246:fb82:f36c:8ede;
@@ -736,7 +736,6 @@ allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
