--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -300,7 +300,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.43;
 allow 185.130.47.58;
-allow 185.132.53.12;
 allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
@@ -559,7 +558,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -663,6 +661,7 @@ allow 193.218.118.89;
 allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.161;
+allow 193.26.115.212;
 allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
@@ -1310,7 +1309,6 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1332,7 +1330,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
-allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1701,13 +1698,13 @@ allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:9:1:193:26:115:161;
+allow 2a12:a800:9:1:193:26:115:212;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1718,6 +1715,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1770,7 +1768,6 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.152.10.22;
 allow 45.157.11.6;
-allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1843,7 +1840,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
 allow 5.255.101.10;
-allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.110.29;
@@ -1907,6 +1903,7 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
+allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
