--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -675,6 +675,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -1329,6 +1330,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1648,7 +1650,9 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
@@ -1768,6 +1772,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.152.10.22;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1839,6 +1844,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1968,6 +1974,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
