--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -675,6 +675,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -979,6 +980,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.152.10.22;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1050,6 +1052,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1179,6 +1182,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
