--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -414,6 +414,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -733,7 +734,9 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:6fc2:8000::639;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
