--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -675,6 +675,7 @@ deny 194.233.174.56;
 deny 194.26.192.77;
 deny 194.53.137.156;
 deny 194.87.55.98;
+deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.47.238.176;
@@ -1329,6 +1330,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1648,7 +1650,9 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
+deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:1467::;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:6fc2:8000::639;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
@@ -1768,6 +1772,7 @@ deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.152.10.22;
 deny 45.157.11.6;
+deny 45.159.250.144;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1839,6 +1844,7 @@ deny 5.181.80.107;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1968,6 +1974,7 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
+deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
