--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -133,6 +133,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -346,6 +347,7 @@ deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f9:2b:75d::124:148;
+deny 2a01:5e0:36:c311::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
@@ -359,10 +361,6 @@ deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
-deny 2a02:c206:2240:3516::1;
-deny 2a02:c206:2240:5051::1;
-deny 2a02:c206:2240:5054::1;
-deny 2a02:c206:2240:5264::1;
 deny 2a02:c206:2240:8448::1;
 deny 2a02:c206:2241:2588::1;
 deny 2a02:ec0:209:10::4;
@@ -729,11 +727,11 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
-deny 2a10:1fc0:10::e4c8:9020;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:1467::;
+deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:6fc2:8000::639;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
